get_follow_lists openapi
