# openApi/server/openapi_server/models/get_follow_list_request_params.py
@@ -1,0 +1,102 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class GetFollowListRequestParams(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, observer=None, follow_type='blacklisted'):  # noqa: E501
+        """GetFollowListRequestParams - a model defined in OpenAPI
+
+        :param observer: The observer of this GetFollowListRequestParams.  # noqa: E501
+        :type observer: str
+        :param follow_type: The follow_type of this GetFollowListRequestParams.  # noqa: E501
+        :type follow_type: str
+        """
+        self.openapi_types = {
+            'observer': str,
+            'follow_type': str
+        }
+
+        self.attribute_map = {
+            'observer': 'observer',
+            'follow_type': 'follow_type'
+        }
+
+        self._observer = observer
+        self._follow_type = follow_type
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GetFollowListRequestParams':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GetFollowListRequest_params of this GetFollowListRequestParams.  # noqa: E501
+        :rtype: GetFollowListRequestParams
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def observer(self):
+        """Gets the observer of this GetFollowListRequestParams.
+
+        valid account name  # noqa: E501
+
+        :return: The observer of this GetFollowListRequestParams.
+        :rtype: str
+        """
+        return self._observer
+
+    @observer.setter
+    def observer(self, observer):
+        """Sets the observer of this GetFollowListRequestParams.
+
+        valid account name  # noqa: E501
+
+        :param observer: The observer of this GetFollowListRequestParams.
+        :type observer: str
+        """
+        if observer is None:
+            raise ValueError("Invalid value for `observer`, must not be `None`")  # noqa: E501
+
+        self._observer = observer
+
+    @property
+    def follow_type(self):
+        """Gets the follow_type of this GetFollowListRequestParams.
+
+        type of followow  # noqa: E501
+
+        :return: The follow_type of this GetFollowListRequestParams.
+        :rtype: str
+        """
+        return self._follow_type
+
+    @follow_type.setter
+    def follow_type(self, follow_type):
+        """Sets the follow_type of this GetFollowListRequestParams.
+
+        type of followow  # noqa: E501
+
+        :param follow_type: The follow_type of this GetFollowListRequestParams.
+        :type follow_type: str
+        """
+        allowed_values = ["blacklisted", "follow_blacklist", "muted", "follow_muted"]  # noqa: E501
+        if follow_type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `follow_type` ({0}), must be one of {1}"
+                .format(follow_type, allowed_values)
+            )
+
+        self._follow_type = follow_type
